// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingOverlay matches snapshot when hidden 1`] = `
<DocumentFragment>
  <div
    class="sc-aXZVg kYawNo"
  >
    <p>
      Loading, please wait...
    </p>
    <img
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;

exports[`LoadingOverlay matches snapshot when shown 1`] = `
<DocumentFragment>
  <div
    class="sc-aXZVg bGqqkF"
  >
    <p>
      Loading, please wait...
    </p>
    <img
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;
